<resources>
    <string name="app_name">MyMusicPlayer</string>
    <string name="text_nav_home">Home</string>
    <string name="text_nav_songs">Songs</string>
    <string name="text_nav_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search">Search album song</string>
    <string name="text_hot_recommended">Hot Recommended</string>
    <string name="text_songs">Songs</string>
    <string name="text_albums">Albums</string>
    <string name="text_artists">Artists</string>
    <string name="text_nav_themes">Themes</string>
    <string name="text_nav_ringtone_cutter">Ringtone Cutter</string>
    <string name="text_nav_hidden_folders">Hidden Folders</string>
    <string name="text_recently_played">Recently Played</string>
    <string name="text_view_all">View All</string>
    <string name="text_play_list">Playlist</string>

    <string name="recently_added">Recently Added</string>
    <string name="favorites">Favorites</string>
    <string name="top_played">Top Played</string>
    <string name="recently_played">Recently Played</string>

    <string name="grant_permission">Grant Permission!</string>
    <string name="grant_permission_message">You will have to grant permission from settings.\nOpen Settings?</string>
    <string name="open_settings">Open Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_my_play_list">My Playlist</string>
    <string name="text_my_top_tracks">My Top Tracks</string>
    <string name="text_latest_added">Latest Added</string>
    <string name="text_history">History</string>
    <string name="text_favorites">Favorites</string>

</resources>