<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".fragment.HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_hot_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_hot_recommended"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hot_recommended_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_hot_recommended"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_hot_recommended" />


            <View
                android:id="@+id/view_one"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/hot_recommended_recyclerview"
                android:background="@color/color_bg_top_nav_header"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>


            <TextView
                android:id="@+id/text_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_one"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_play_list"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlist_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_playlist"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_playlist" />

            <View
                android:id="@+id/view_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/playlist_recyclerview"
                android:background="@color/color_bg_top_nav_header"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/text_recently_played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_two"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_recently_played"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text_recently_played_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_two"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_view_all"
                android:textColor="@color/color_text_view_All"
                android:textSize="14sp"
                android:textStyle="normal" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recently_played_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_recently_played"
                android:layout_marginTop="10dp"
                tools:listitem="@layout/card_recently_played" />


        </RelativeLayout>




    </RelativeLayout>
</RelativeLayout>